--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     }
   ],
   "require": {
-    "php": "^7.4 || 8.0",
+    "php": "^7.4 || ^8.0",
     "pollen-solutions/database": "^1.0",
     "pollen-solutions/support": "^1.0"
   },
